app/intermediary/config.scss
//	IMAGE PRESETS 
//
//		- $mobile$ - scl=1
//		
//		- $desktop$ - scl=2
//		- $retina$ - scl=1
//
//		TO DO
//
//		- $tablet-tfw$ - turns true-fw to width 1536px - scl=2.60416666666667
//		- $tablet-efw$ - turns extend-fw to width 1536px - scl=1.667&cropN=0.18,0,0.64,1
//		- $tablet-img$ - turns standard image to width 1536px - scl=1.5625 // *same as below so will use that image preset*
//
//		- $desktop-sm$ - turns true-fw to width 1280px - scl=3.125
//		- $retina-sm$ - turns true-fw to width 2560px - scl=1.5625
//
//		- $desktop-sm_crop$ - turns extend-fw to width 1280px - scl=2&cropN=0.18,0,0.64,1
//		- $retina-sm_crop$ - turns extend-fw to width 2560px - scl=1&cropN=0.18,0,0.64,1
//
//		- $desktop-md$ - turns true-fw to width 1440px - scl=2.77777777777778
//		- $retina-md$ - turns true-fw to width 2880px - scl=1.38888888888889
//
//		- $desktop-md_crop$ - turns extend-fw to width 1440px - scl=2&cropN=0.14,0,0.72,1
//		- $retina-md_crop$ - turns extend-fw to width 2880px - scl=1&cropN=0.14,0,0.72,1

//	MEDIA QUERIES

$mobile : "(max-width: 700px)";

$desktop-small : "(min-width: 701px)";
$tablet : "(min-width: 701px) and (max-width: 768px) and (min-resolution: 192dpi) ";
$retina-small : "(min-width: 769px) and (min-resolution: 192dpi)";

$desktop-medium : "(min-width: 1281px)";
$retina-medium : "(min-width: 1281px) and (min-resolution: 192dpi)";

$desktop-large : "(min-width: 1441px)";
$retina-large : "(min-width: 1441px) and (min-resolution: 192dpi)";

@mixin mobile( $name: 'promo',
              $url: '',
              $urlUK : '',
              $urlUS : '',
              $urlAU : '',
              $urlEU : '',
              $urlSE : '',
              $urlIE : '',
              $urlFR : '',
              $urlDE : '',
              $urlNL : '',
              $marginTop : '',
              $marginBottom : '',
              $paddingBottom : '',
              $flush: ''  ) {

  .#{$name} {

    padding-bottom: $paddingBottom;

    @if $marginTop != '' {
      margin-top: $marginTop;
    }

    @if $marginBottom != '' {
      margin-bottom: $marginBottom;
    }

    @if $url != '' {
      background-image: url('#{$url}?#{$flush}&$mobile$');
    } @else {
      display: none;
    }

    @media #{$desktop-small} {
      display: none;
    }

  }

  @if $urlUK != '' {

    .region-UK .#{$name} {
      
      background-image: url('#{$urlUK}?#{$flush}&$mobile$');

      @if $url == '' {
        @media #{$mobile} {
          display: block;
        }
      }

    }

  }

  @if $urlUS != '' {

    .region-US .#{$name} {
        
      background-image: url('#{$urlUS}?#{$flush}&$mobile$');

      @if $url == '' {
        @media #{$mobile} {
          display: block;
        }
      }
      
    }
  }

  @if $urlAU != '' {

    .region-AU .#{$name} {

      background-image: url('#{$urlAU}?#{$flush}&$mobile$');

      @if $url == '' {
        @media #{$mobile} {
          display: block;
        }
      }
      
    }
  }

  @if $urlEU != '' {

    .region-EU .#{$name} {

      background-image: url('#{$urlEU}?#{$flush}&$mobile$');

      @if $url == '' {
        @media #{$mobile} {
          display: block;
        }
      }
      
    }
  }

  @if $urlSE != '' {

    .region-SE .#{$name} {
        
      background-image: url('#{$urlSE}?#{$flush}&$mobile$');

      @if $url == '' {
        @media #{$mobile} {
          display: block;
        }
      }

    } 
  }

  @if $urlIE != '' {

    .region-IE .#{$name} {

      background-image: url('#{$urlIE}?#{$flush}&$mobile$');

      @if $url == '' {
        @media #{$mobile} {
          display: block;
        }
      }
      
    }
  }

  @if $urlFR != '' {

    .region-FR .#{$name} {

      background-image: url('#{$urlFR}?#{$flush}&$mobile$');

      @if $url == '' {
        @media #{$mobile} {
          display: block;
        }
      }

    }
  }

  @if $urlDE != '' {

    .region-DE .#{$name} {

      background-image: url('#{$urlDE}?#{$flush}&$desktop$');

      @if $url == '' {
        @media #{$mobile} {
          display: block;
        }
      }

    }
  }

  @if $urlNL != '' {

    .region-NL .#{$name} {

      background-image: url('#{$urlNL}?#{$flush}&$desktop$');

      @if $url == '' {
        @media #{$mobile} {
          display: block;
        }
      }
   
    }
  }

}
/* ... */

